--- a/04-building-a-data-lake/workshop/workshop.ipynb
+++ b/04-building-a-data-lake/workshop/workshop.ipynb
@@ -537,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +551,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c80e916075a2b82094dca76813fb3e5fb73aa0d1a7cce80c36ca9677ad6ba624"
+   }
   }
  },
  "nbformat": 4,
